// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Action Manager with default value from redux store 1`] = `
<div>
  <div
    className={undefined}
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitBoxPack": "justify",
        "WebkitJustifyContent": "space-between",
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "rgb(232, 232, 232)",
        "boxSizing": "border-box",
        "display": Array [
          "-webkit-box",
          "-moz-box",
          "-ms-flexbox",
          "-webkit-flex",
          "flex",
        ],
        "height": 56,
        "justifyContent": "space-between",
        "msFlexPack": "justify",
        "muiPrepared": true,
        "padding": "0px 24px",
      }
    }
  >
    <div
      className={undefined}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxPack": "justify",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "display": Array [
            "-webkit-box",
            "-moz-box",
            "-ms-flexbox",
            "-webkit-flex",
            "flex",
          ],
          "justifyContent": "space-between",
          "marginLeft": -24,
          "marginRight": undefined,
          "msFlexAlign": "center",
          "msFlexPack": "justify",
          "muiPrepared": true,
          "position": "relative",
        }
      }
    >
      <button
        disabled={true}
        href={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "MozBoxSizing": "border-box",
            "MozUserSelect": "none",
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "WebkitUserSelect": "none",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.3)",
            "cursor": "default",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": "10px 24px",
            "minWidth": 88,
            "msUserSelect": "none",
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={-1}
        type="button"
      />
    </div>
    <div
      className={undefined}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxPack": "justify",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "display": Array [
            "-webkit-box",
            "-moz-box",
            "-ms-flexbox",
            "-webkit-flex",
            "flex",
          ],
          "justifyContent": "space-between",
          "marginLeft": undefined,
          "marginRight": undefined,
          "msFlexAlign": "center",
          "msFlexPack": "justify",
          "muiPrepared": true,
          "position": "relative",
        }
      }
    />
  </div>
  <div
    style={Object {}}
  />
</div>
`;

exports[`Render Action Manager with default value from redux store with actionId 1`] = `
<div>
  <div
    className={undefined}
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitBoxPack": "justify",
        "WebkitJustifyContent": "space-between",
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "rgb(232, 232, 232)",
        "boxSizing": "border-box",
        "display": Array [
          "-webkit-box",
          "-moz-box",
          "-ms-flexbox",
          "-webkit-flex",
          "flex",
        ],
        "height": 56,
        "justifyContent": "space-between",
        "msFlexPack": "justify",
        "muiPrepared": true,
        "padding": "0px 24px",
      }
    }
  >
    <div
      className={undefined}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxPack": "justify",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "display": Array [
            "-webkit-box",
            "-moz-box",
            "-ms-flexbox",
            "-webkit-flex",
            "flex",
          ],
          "justifyContent": "space-between",
          "marginLeft": -24,
          "marginRight": undefined,
          "msFlexAlign": "center",
          "msFlexPack": "justify",
          "muiPrepared": true,
          "position": "relative",
        }
      }
    >
      <button
        disabled={true}
        href={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "MozBoxSizing": "border-box",
            "MozUserSelect": "none",
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "WebkitUserSelect": "none",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.3)",
            "cursor": "default",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": "10px 24px",
            "minWidth": 88,
            "msUserSelect": "none",
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={-1}
        type="button"
      >
        <span
          style={
            Object {
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "muiPrepared": true,
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "relative",
              "textTransform": "uppercase",
              "verticalAlign": "middle",
            }
          }
        >
          Action : 1
        </span>
      </button>
    </div>
    <div
      className={undefined}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxPack": "justify",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "display": Array [
            "-webkit-box",
            "-moz-box",
            "-ms-flexbox",
            "-webkit-flex",
            "flex",
          ],
          "justifyContent": "space-between",
          "marginLeft": undefined,
          "marginRight": undefined,
          "msFlexAlign": "center",
          "msFlexPack": "justify",
          "muiPrepared": true,
          "position": "relative",
        }
      }
    />
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": 20,
        }
      }
    >
      <div>
        <div
          className="row"
        >
          <div
            className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
          >
            <div
              className="row"
            />
          </div>
          <div
            className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
          >
            <ul
              className="list-inline"
              style={
                Object {
                  "MozBorderRadius": "10px",
                  "WebkitBorderRadius": "10px",
                  "border": "2px solid gray",
                  "borderRadius": "10px",
                }
              }
            >
              <li>
                <ul
                  className="list-inline"
                />
              </li>
              <li>
                <div
                  style={
                    Object {
                      "display": "inline-block",
                      "muiPrepared": true,
                      "position": "relative",
                      "width": "100%",
                    }
                  }
                >
                  <div
                    className={undefined}
                    style={
                      Object {
                        "WebkitTransition": "height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "backgroundColor": "transparent",
                        "cursor": "auto",
                        "display": "inline-block",
                        "fontFamily": "Roboto, sans-serif",
                        "fontSize": 16,
                        "height": 48,
                        "lineHeight": "24px",
                        "muiPrepared": true,
                        "position": "relative",
                        "transition": "height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "width": "100%",
                      }
                    }
                  >
                    <input
                      autoComplete="off"
                      disabled={false}
                      id="searchText"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      open={false}
                      style={
                        Object {
                          "MozAppearance": "textfield",
                          "WebkitAppearance": "textfield",
                          "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                          "appearance": "textfield",
                          "backgroundColor": "rgba(0,0,0,0)",
                          "border": "none",
                          "color": "rgba(0, 0, 0, 0.87)",
                          "cursor": "inherit",
                          "font": "inherit",
                          "height": "100%",
                          "muiPrepared": true,
                          "outline": "none",
                          "padding": 0,
                          "position": "relative",
                          "width": "100%",
                        }
                      }
                      type="text"
                      value=""
                    />
                    <div>
                      <hr
                        style={
                          Object {
                            "MozBoxSizing": "content-box",
                            "borderBottom": "solid 1px",
                            "borderColor": "#e0e0e0",
                            "borderLeft": "none",
                            "borderRight": "none",
                            "borderTop": "none",
                            "bottom": 8,
                            "boxSizing": "content-box",
                            "margin": 0,
                            "muiPrepared": true,
                            "position": "absolute",
                            "width": "100%",
                          }
                        }
                      />
                      <hr
                        style={
                          Object {
                            "MozBoxSizing": "content-box",
                            "WebkitTransform": "scaleX(0)",
                            "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                            "borderBottom": "solid 2px",
                            "borderColor": "#00bcd4",
                            "borderLeft": "none",
                            "borderRight": "none",
                            "borderTop": "none",
                            "bottom": 8,
                            "boxSizing": "content-box",
                            "margin": 0,
                            "msTransform": "scaleX(0)",
                            "muiPrepared": true,
                            "position": "absolute",
                            "transform": "scaleX(0)",
                            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                            "width": "100%",
                          }
                        }
                      />
                    </div>
                  </div>
                  <div
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                  />
                </div>
              </li>
            </ul>
          </div>
          <div
            className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
          >
            <ul
              className="list-inline"
              style={
                Object {
                  "MozBorderRadius": "10px",
                  "WebkitBorderRadius": "10px",
                  "border": "2px solid gray",
                  "borderRadius": "10px",
                  "margin": 10,
                  "padding": 0,
                }
              }
            >
              <li
                style={
                  Object {
                    "backgroundColor": "#4caf50",
                  }
                }
              >
                <button
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOut={[Function]}
                  onTouchStart={[Function]}
                  onTouchTap={[Function]}
                  style={
                    Object {
                      "MozBoxSizing": "border-box",
                      "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                      "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "background": "none",
                      "border": 10,
                      "boxSizing": "border-box",
                      "cursor": "pointer",
                      "display": "inline-block",
                      "fontFamily": "Roboto, sans-serif",
                      "fontSize": 0,
                      "fontWeight": "inherit",
                      "height": 36,
                      "margin": 0,
                      "muiPrepared": true,
                      "outline": "none",
                      "overflow": "visible",
                      "padding": 2,
                      "position": "relative",
                      "textDecoration": "none",
                      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "verticalAlign": null,
                      "width": 36,
                      "zIndex": 1,
                    }
                  }
                  tabIndex={0}
                  type="button"
                >
                  <div
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                  >
                    <svg
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "MozUserSelect": "none",
                          "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "WebkitUserSelect": "none",
                          "color": "rgba(0, 0, 0, 0.87)",
                          "display": "inline-block",
                          "fill": "currentColor",
                          "height": 24,
                          "msUserSelect": "none",
                          "muiPrepared": true,
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "userSelect": "none",
                          "width": 24,
                        }
                      }
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z"
                      />
                    </svg>
                    ;
                  </div>
                </button>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="row"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Render Action Manager with default value from redux store with unexisting actionId 1`] = `
<div>
  <div
    className={undefined}
    style={
      Object {
        "MozBoxSizing": "border-box",
        "WebkitBoxPack": "justify",
        "WebkitJustifyContent": "space-between",
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "rgb(232, 232, 232)",
        "boxSizing": "border-box",
        "display": Array [
          "-webkit-box",
          "-moz-box",
          "-ms-flexbox",
          "-webkit-flex",
          "flex",
        ],
        "height": 56,
        "justifyContent": "space-between",
        "msFlexPack": "justify",
        "muiPrepared": true,
        "padding": "0px 24px",
      }
    }
  >
    <div
      className={undefined}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxPack": "justify",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "display": Array [
            "-webkit-box",
            "-moz-box",
            "-ms-flexbox",
            "-webkit-flex",
            "flex",
          ],
          "justifyContent": "space-between",
          "marginLeft": -24,
          "marginRight": undefined,
          "msFlexAlign": "center",
          "msFlexPack": "justify",
          "muiPrepared": true,
          "position": "relative",
        }
      }
    >
      <button
        disabled={true}
        href={undefined}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        onTouchTap={[Function]}
        style={
          Object {
            "MozBoxSizing": "border-box",
            "MozUserSelect": "none",
            "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
            "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "WebkitUserSelect": "none",
            "backgroundColor": "rgba(0, 0, 0, 0)",
            "border": 10,
            "borderRadius": 2,
            "boxSizing": "border-box",
            "color": "rgba(0, 0, 0, 0.3)",
            "cursor": "default",
            "display": "inline-block",
            "fontFamily": "Roboto, sans-serif",
            "fontSize": "inherit",
            "fontWeight": "inherit",
            "height": 36,
            "lineHeight": "36px",
            "margin": "10px 24px",
            "minWidth": 88,
            "msUserSelect": "none",
            "muiPrepared": true,
            "outline": "none",
            "overflow": "hidden",
            "padding": 0,
            "position": "relative",
            "textAlign": "center",
            "textDecoration": "none",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
            "verticalAlign": null,
            "zIndex": 1,
          }
        }
        tabIndex={-1}
        type="button"
      >
        <span
          style={
            Object {
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "muiPrepared": true,
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "relative",
              "textTransform": "uppercase",
              "verticalAlign": "middle",
            }
          }
        >
          1
        </span>
      </button>
    </div>
    <div
      className={undefined}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxPack": "justify",
          "WebkitJustifyContent": "space-between",
          "alignItems": "center",
          "display": Array [
            "-webkit-box",
            "-moz-box",
            "-ms-flexbox",
            "-webkit-flex",
            "flex",
          ],
          "justifyContent": "space-between",
          "marginLeft": undefined,
          "marginRight": undefined,
          "msFlexAlign": "center",
          "msFlexPack": "justify",
          "muiPrepared": true,
          "position": "relative",
        }
      }
    />
  </div>
  <div
    style={Object {}}
  />
</div>
`;

exports[`Render Action with default value from redux store 1`] = `
<div
  style={Object {}}
/>
`;

exports[`Render Action with default value from redux store with actionId 1`] = `
<div
  style={Object {}}
>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <div
            className="row"
          />
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        >
          <ul
            className="list-inline"
            style={
              Object {
                "MozBorderRadius": "10px",
                "WebkitBorderRadius": "10px",
                "border": "2px solid gray",
                "borderRadius": "10px",
              }
            }
          >
            <li>
              <ul
                className="list-inline"
              />
            </li>
            <li>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "muiPrepared": true,
                    "position": "relative",
                    "width": "100%",
                  }
                }
              >
                <div
                  className={undefined}
                  style={
                    Object {
                      "WebkitTransition": "height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "backgroundColor": "transparent",
                      "cursor": "auto",
                      "display": "inline-block",
                      "fontFamily": "Roboto, sans-serif",
                      "fontSize": 16,
                      "height": 48,
                      "lineHeight": "24px",
                      "muiPrepared": true,
                      "position": "relative",
                      "transition": "height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "width": "100%",
                    }
                  }
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    id="searchText"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    style={
                      Object {
                        "MozAppearance": "textfield",
                        "WebkitAppearance": "textfield",
                        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                        "appearance": "textfield",
                        "backgroundColor": "rgba(0,0,0,0)",
                        "border": "none",
                        "color": "rgba(0, 0, 0, 0.87)",
                        "cursor": "inherit",
                        "font": "inherit",
                        "height": "100%",
                        "muiPrepared": true,
                        "outline": "none",
                        "padding": 0,
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                    type="text"
                    value=""
                  />
                  <div>
                    <hr
                      style={
                        Object {
                          "MozBoxSizing": "content-box",
                          "borderBottom": "solid 1px",
                          "borderColor": "#e0e0e0",
                          "borderLeft": "none",
                          "borderRight": "none",
                          "borderTop": "none",
                          "bottom": 8,
                          "boxSizing": "content-box",
                          "margin": 0,
                          "muiPrepared": true,
                          "position": "absolute",
                          "width": "100%",
                        }
                      }
                    />
                    <hr
                      style={
                        Object {
                          "MozBoxSizing": "content-box",
                          "WebkitTransform": "scaleX(0)",
                          "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "borderBottom": "solid 2px",
                          "borderColor": "#00bcd4",
                          "borderLeft": "none",
                          "borderRight": "none",
                          "borderTop": "none",
                          "bottom": 8,
                          "boxSizing": "content-box",
                          "margin": 0,
                          "msTransform": "scaleX(0)",
                          "muiPrepared": true,
                          "position": "absolute",
                          "transform": "scaleX(0)",
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "width": "100%",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                />
              </div>
            </li>
          </ul>
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <ul
            className="list-inline"
            style={
              Object {
                "MozBorderRadius": "10px",
                "WebkitBorderRadius": "10px",
                "border": "2px solid gray",
                "borderRadius": "10px",
                "margin": 10,
                "padding": 0,
              }
            }
          >
            <li
              style={
                Object {
                  "backgroundColor": "#4caf50",
                }
              }
            >
              <button
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseOut={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                style={
                  Object {
                    "MozBoxSizing": "border-box",
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "background": "none",
                    "border": 10,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": 0,
                    "fontWeight": "inherit",
                    "height": 36,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "visible",
                    "padding": 2,
                    "position": "relative",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": 36,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "MozUserSelect": "none",
                        "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "WebkitUserSelect": "none",
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "msUserSelect": "none",
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z"
                    />
                  </svg>
                  ;
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="row"
      />
    </div>
  </div>
</div>
`;

exports[`Render Action with default value from redux store with disabled actionId 1`] = `
<div
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    style={
      Object {
        "margin": 20,
      }
    }
  >
    <div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <div
            className="row"
          />
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-6"
        >
          <ul
            className="list-inline"
            style={
              Object {
                "MozBorderRadius": "10px",
                "WebkitBorderRadius": "10px",
                "border": "2px solid gray",
                "borderRadius": "10px",
              }
            }
          >
            <li>
              <ul
                className="list-inline"
              />
            </li>
            <li>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "muiPrepared": true,
                    "position": "relative",
                    "width": "100%",
                  }
                }
              >
                <div
                  className={undefined}
                  style={
                    Object {
                      "WebkitTransition": "height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "backgroundColor": "transparent",
                      "cursor": "auto",
                      "display": "inline-block",
                      "fontFamily": "Roboto, sans-serif",
                      "fontSize": 16,
                      "height": 48,
                      "lineHeight": "24px",
                      "muiPrepared": true,
                      "position": "relative",
                      "transition": "height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                      "width": "100%",
                    }
                  }
                >
                  <input
                    autoComplete="off"
                    disabled={false}
                    id="searchText"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    open={false}
                    style={
                      Object {
                        "MozAppearance": "textfield",
                        "WebkitAppearance": "textfield",
                        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
                        "appearance": "textfield",
                        "backgroundColor": "rgba(0,0,0,0)",
                        "border": "none",
                        "color": "rgba(0, 0, 0, 0.87)",
                        "cursor": "inherit",
                        "font": "inherit",
                        "height": "100%",
                        "muiPrepared": true,
                        "outline": "none",
                        "padding": 0,
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                    type="text"
                    value=""
                  />
                  <div>
                    <hr
                      style={
                        Object {
                          "MozBoxSizing": "content-box",
                          "borderBottom": "solid 1px",
                          "borderColor": "#e0e0e0",
                          "borderLeft": "none",
                          "borderRight": "none",
                          "borderTop": "none",
                          "bottom": 8,
                          "boxSizing": "content-box",
                          "margin": 0,
                          "muiPrepared": true,
                          "position": "absolute",
                          "width": "100%",
                        }
                      }
                    />
                    <hr
                      style={
                        Object {
                          "MozBoxSizing": "content-box",
                          "WebkitTransform": "scaleX(0)",
                          "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "borderBottom": "solid 2px",
                          "borderColor": "#00bcd4",
                          "borderLeft": "none",
                          "borderRight": "none",
                          "borderTop": "none",
                          "bottom": 8,
                          "boxSizing": "content-box",
                          "margin": 0,
                          "msTransform": "scaleX(0)",
                          "muiPrepared": true,
                          "position": "absolute",
                          "transform": "scaleX(0)",
                          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                          "width": "100%",
                        }
                      }
                    />
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "display": "none",
                    }
                  }
                />
              </div>
            </li>
          </ul>
        </div>
        <div
          className="col-xs-12 col-sm-4 col-md-4 col-lg-3"
        >
          <ul
            className="list-inline"
            style={
              Object {
                "MozBorderRadius": "10px",
                "WebkitBorderRadius": "10px",
                "border": "2px solid gray",
                "borderRadius": "10px",
                "margin": 10,
                "padding": 0,
              }
            }
          >
            <li
              style={
                Object {
                  "backgroundColor": "#4caf50",
                }
              }
            >
              <button
                disabled={false}
                href={undefined}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseOut={[Function]}
                onTouchStart={[Function]}
                onTouchTap={[Function]}
                style={
                  Object {
                    "MozBoxSizing": "border-box",
                    "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                    "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "background": "none",
                    "border": 10,
                    "boxSizing": "border-box",
                    "cursor": "pointer",
                    "display": "inline-block",
                    "fontFamily": "Roboto, sans-serif",
                    "fontSize": 0,
                    "fontWeight": "inherit",
                    "height": 36,
                    "margin": 0,
                    "muiPrepared": true,
                    "outline": "none",
                    "overflow": "visible",
                    "padding": 2,
                    "position": "relative",
                    "textDecoration": "none",
                    "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                    "verticalAlign": null,
                    "width": 36,
                    "zIndex": 1,
                  }
                }
                tabIndex={0}
                type="button"
              >
                <div
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <svg
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "MozUserSelect": "none",
                        "WebkitTransition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "WebkitUserSelect": "none",
                        "color": "rgba(0, 0, 0, 0.87)",
                        "display": "inline-block",
                        "fill": "currentColor",
                        "height": 24,
                        "msUserSelect": "none",
                        "muiPrepared": true,
                        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
                        "userSelect": "none",
                        "width": 24,
                      }
                    }
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M4 8h4V4H4v4zm6 12h4v-4h-4v4zm-6 0h4v-4H4v4zm0-6h4v-4H4v4zm6 0h4v-4h-4v4zm6-10v4h4V4h-4zm-6 4h4V4h-4v4zm6 6h4v-4h-4v4zm0 6h4v-4h-4v4z"
                    />
                  </svg>
                  ;
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="row"
      />
    </div>
  </div>
</div>
`;

exports[`Render Action with default value from redux store with unexisting actionId 1`] = `
<div
  style={Object {}}
/>
`;
